--- a/styles.css
+++ b/styles.css
@@ -1030,6 +1030,9 @@ background-color: #2dc3e8 !important;
 display: none;
 
 	}
+	.message-box{
+	display: none;
+	}
 .header{
 	margin-left: 10px;
 }
